--- a/src/main/asciidoc/reference/setup.adoc
+++ b/src/main/asciidoc/reference/setup.adoc
@@ -77,9 +77,9 @@ public class MyConfiguration extends Neo4jConfiguration {
         return new SessionFactory("org.neo4j.example.domain");
     }
 
-    // needed for session in view in web-applications
+    // needed for sessionFactory in view in web-applications
     @Bean
-    @Scope(value = "session", proxyMode = ScopedProxyMode.TARGET_CLASS)
+    @Scope(value = "sessionFactory", proxyMode = ScopedProxyMode.TARGET_CLASS)
     public Session getSession() throws Exception {
         return super.getSession();
     }
@@ -333,29 +333,29 @@ This is no longer appropriate given the new Driver mechanism, and we recommend y
 ====
 === SessionFactory Bean
 
-The `SessionFactory` is needed by SDN 4.1 to create instances of `org.neo4j.ogm.session.Session` as required.
+The `SessionFactory` is needed by SDN 4.1 to create instances of `org.neo4j.ogm.sessionFactory.Session` as required.
 When constructed, it sets up the object-graph mapping metadata, which is then used across all `Session` objects that it creates.
 As seen in the above example, the packages to scan for domain object metadata should be provided to the `SessionFactory` constructor.
 
-Note that the session factory should typically be application-scoped.
+Note that the sessionFactory factory should typically be application-scoped.
 While you can use a narrower scope for this if you like, there is typically no advantage in doing so.
 
 === Session Bean
 
-A `Session` is used to drive the object-graph mapping framework on which Spring Data Neo4j is based.  
+A `Session` is used to drive the object-graph mapping framework on which Spring Data Neo4j is based.
 All repository implementations and `Neo4jTemplate` are driven by the `Session`.
 You can also auto-wire it into your Spring beans and code against it directly if you wish.
 
-The life cycle of a `Session` is important to consider because it keeps track of the changes that have been made to entities and their relationships.  
-The reason it does this is so that only entities and relationships that have changed get persisted on save, which is particularly efficient when working with large graphs.  
+The life cycle of a `Session` is important to consider because it keeps track of the changes that have been made to entities and their relationships.
+The reason it does this is so that only entities and relationships that have changed get persisted on save, which is particularly efficient when working with large graphs.
 Note, however, that the `Session` *does not ever return cached objects* so there's no risk of getting stale data on load; it always hits the database.
 
 If your application relies on long-running sessions and does not reload entities then you may not see changes made from other users and find yourself working with outdated objects.
-On the other hand, if your sessions have too narrow a scope then your save operations can be unnecessarily expensive, as updates will be made to all objects if the session isn't aware of the those that were originally loaded.
+On the other hand, if your sessions have too narrow a scope then your save operations can be unnecessarily expensive, as updates will be made to all objects if the sessionFactory isn't aware of the those that were originally loaded.
 
-There's therefore a trade off between the two approaches.  
-In general, the scope of a `Session` should correspond to a "unit of work" in your application.  
-What this means depends on the usage scenario, but in a typical web-based Spring application we recommend using a request-scoped or HTTP-session-scoped `Session`.  
+There's therefore a trade off between the two approaches.
+In general, the scope of a `Session` should correspond to a "unit of work" in your application.
+What this means depends on the usage scenario, but in a typical web-based Spring application we recommend using a request-scoped or HTTP-sessionFactory-scoped `Session`.
 Either way, if you make sure you load fresh data at the beginning of each unit of work then data integrity shouldn't be a problem.
 
 Additional beans can be configured just by defining them in the Spring context in the normal way.
